--- a/M_FOLDER/Hobby.html
+++ b/M_FOLDER/Hobby.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>School</title>
+    <title>Hobby</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <style>
-        body{
-            height: 100vh;
+        body {
+            position: absolute;
+            height: max-content;
             width: 100vw;
             display: flex;
             flex-direction: column;
@@ -15,21 +19,50 @@
             border-radius: 20px;
             font-size: 20px;
         }
-    img{
-        height: 200px;
-        width: Auto;
-    }
-    h1{
-        width: 80vw;
-        text-align: center;
-        border: 2px solid orangered;
-        color: orangered;
-    }
+
+        img {
+            height: 200px;
+            width: Auto;
+        }
+
+        h1 {
+            width: 80vw;
+            text-align: center;
+            border: 2px solid orangered;
+            color: orangered;
+        }
     </style>
 </head>
+
 <body>
     <h1>Hobby</h1>
     <img src="https://img.freepik.com/free-vector/hand-drawn-flat-people-hobbies_52683-70930.jpg">
-    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem similique?</P>
+    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi aperiam,
+        at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem
+        similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi
+        aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem
+        similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi
+        aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem
+        similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi
+        aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem
+        similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi
+        aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem
+        similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi
+        aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem
+        similique?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dicta ad inventore fugit non velit animi
+        aperiam, at, numquam iure consequuntur deleniti facere asperiores porro neque repudiandae assumenda autem
+        similique?</P>
+
+    <button id="btn" onclick="menu()"></button>
+    <div id="nav">
+        <ul>
+            <li><a href="HomePage.php">Home</a></li>
+            <li><a href="EditPro.html">Change Profile</a></li>
+            <li><a href="School.html">School</a></li>
+            <li><a href="College.html">College</a></li>
+            <li><a href="Job.html">Job</a></li>
+        </ul>
+    </div>
 </body>
+
 </html>
